# micro-analyser

./: LICENSE  README.md  default.nix  micro-analyser.cabal  micro-analyser.conf.sample
src/: Format.hs  Kibana.hs  MAConfigFile.hs  MANetwork.hs  MAOutput.hs  Main.hs  MicroProbeOptions.hs  Repo.hs  Table.hs  Test.hs
