name:                micro-analyser
version:             0.1.0.0
synopsis:            Allows inspection of microservices on MDTP
description:         Silly project names will continue until time is allocated for development. 
license:             BSD3
license-file:        LICENSE
author:              Luke Tebbs
maintainer:          luke.tebbs@digital.hmrc.gov.uk
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable micro-analyser
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       aeson,
                       bytestring,
                       conduit,
                       http-conduit, 
                       http-types,
                       optparse-applicative,
                       lens,
                       lens-aeson,
                       resourcet,
                       vector,
                       time,
                       text,
                       regex-compat, 
                       containers, 
                       directory
  hs-source-dirs:      src
  default-language:    Haskell2010
